crates/cot-cli/tests/snapshot_testing/migration/snapshots/cli__snapshot_testing__migration__migration_list_empty-6.snap
---
source: cot-cli/tests/snapshot_testing/migration/mod.rs
description: "Verbosity level: trace"
info:
  program: cot
  args:
    - migration
    - list
    - "-vvvvv"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
