crates/cot-cli/tests/snapshot_testing/migration/snapshots/cli__snapshot_testing__migration__migration_list_existing-3.snap
---
source: cot-cli/tests/snapshot_testing/migration/mod.rs
description: "Verbosity level: warn"
info:
  program: cot
  args:
    - migration
    - list
    - "-vv"
---
success: true
exit_code: 0
----- stdout -----
cot-test	m_0001_initial

----- stderr -----
