crates/cot-cli/tests/snapshot_testing/migration/snapshots/cli__snapshot_testing__migration__migration_make_no_models.snap
---
source: cot-cli/tests/snapshot_testing/migration/mod.rs
description: "Verbosity level: off"
info:
  program: cot
  args:
    - migration
    - make
    - "-q"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[1m[37m      Notice[0m No changes in models detected; no migrations were generated
